--- a/template/node18python/Dockerfile
+++ b/template/node18python/Dockerfile
@@ -14,6 +14,8 @@ RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
     python3-venv \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
 
 # Pre-install these
